git-svn-id: svn://scm.gforge.inria.fr/svn/alt-ergo/trunk@86 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,14 @@
+version 0.92.3, April 11th, 2011
+=================================
 
-  o -stopb stop Alt-Ergo after a given number of steps
+  o -steps <i> stops Alt-Ergo after a given number of steps
   o -max-split option to limit the number of case-splits
   o new polymorphic theory of arrays: ('a, 'b) farray
   o explanations (-proof option)
   o Built-in support for enumeration types
+  o graphical frontend (algr-ergo), needs to be compiled with make
+    gui && make install-gui
+  o bug fixes
 
 version 0.92.2, October 22nd, 2010
 =====================================
