--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+
+version 0.93.1, May 9th, 2011
+=================================
+
+  o bug fixes (distinct, let-in)
+
 version 0.93, April 12th, 2011
 =================================
 
