git-svn-id: svn://scm.gforge.inria.fr/svn/alt-ergo/trunk@106 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,7 @@
 version 0.93.1, May 9th, 2011
 =================================
 
-  o bug fixes (distinct, let-in)
+  o bug fixes (distinct, let-in, explanations)
 
 version 0.93, April 12th, 2011
 =================================
