git-svn-id: svn://scm.gforge.inria.fr/svn/alt-ergo/trunk@136 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/tests/parsing/parsing.tex
+++ b/tests/parsing/parsing.tex
@@ -10,6 +10,8 @@
 \usepackage{color}
 \usepackage{alltt}
 \usepackage{verbatim}
+\usepackage{longtable}
+\usepackage{textcomp}
 
 \definecolor{lightgray}{gray}{0.95}
 \makeatletter
