git-svn-id: svn://scm.gforge.inria.fr/svn/alt-ergo/trunk@153 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/util/gtk-lang/alt-ergo.lang
+++ b/util/gtk-lang/alt-ergo.lang
@@ -70,6 +70,7 @@
 	  <keyword>not</keyword>
 	  <keyword>or</keyword>
 	  <keyword>predicate</keyword>
+	  <keyword>reach</keyword>
 	  <keyword>rewriting</keyword>
 	  <keyword>then</keyword>
 	  <keyword>type</keyword>
