git-svn-id: svn://scm.gforge.inria.fr/svn/alt-ergo/trunk@210 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/tests/qualification/tests.tex
+++ b/tests/qualification/tests.tex
@@ -73,4 +73,13 @@
 \input{../sat/results}
 
 
+\section{Tests de l'égalité modulo AC}
+
+\input{../cc_uf_ac/results_exi}
+
+\input{../cc_uf_ac/results_table}
+
+\input{../cc_uf_ac/results}
+
+
 \end{document}
