--- a/tests/qualification/tests.tex
+++ b/tests/qualification/tests.tex
@@ -12,6 +12,7 @@
 \usepackage{verbatim}
 \usepackage{longtable}
 \usepackage{textcomp}
+\usepackage{hyperref}
 
 \definecolor{lightgray}{gray}{0.95}
 \makeatletter
@@ -80,6 +81,15 @@
 \input{../cc_uf_ac/results_table}
 
 \input{../cc_uf_ac/results}
+
+
+\section{Tests de la théorie de l'arithmétique}
+
+\input{../arith/results_exi}
+
+\input{../arith/results_table}
+
+\input{../arith/results}
 
 
 \end{document}
