coucou le revoila
git-svn-id: svn://scm.gforge.inria.fr/svn/alt-ergo/trunk@247 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,11 @@
 
+version 0.94, December 2nd, 2011
+=================================
+
+  o theory of records
+  o bug fixes
+  
+
 version 0.93.1, May 9th, 2011
 =================================
 
