--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 **************************************************************************
 *                                                                        *
-*     The Alt-ergo theorem prover                                        *
+*     The Alt-Ergo theorem prover                                        *
 *     Copyright (C) 2006-2011                                            *
 *                                                                        *
 *     Sylvain Conchon                                                    *
 *     Evelyne Contejean                                                  *
 *                                                                        *
 *     Francois Bobot                                                     *
-*     Stephane Lescuyer                                                  *
 *     Mohamed Iguernelala                                                *
+*     Stephane Lescuyer                                                  *
 *     Alain Mebsout                                                      *
 *                                                                        *
 *     CNRS - INRIA - Universite Paris Sud                                *
