bugfix model + propositional model if subterms with label
git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@430 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/util/gtk-lang/alt-ergo.lang
+++ b/util/gtk-lang/alt-ergo.lang
@@ -65,6 +65,7 @@
 	  <keyword>goal</keyword>
 	  <keyword>hypothesis</keyword>
 	  <keyword>if</keyword>
+	  <keyword>include</keyword>
 	  <keyword>instance</keyword>
 	  <keyword>logic</keyword>
 	  <keyword>not</keyword>
@@ -74,6 +75,7 @@
 	  <keyword>rewriting</keyword>
 	  <keyword>then</keyword>
 	  <keyword>type</keyword>
+	  <keyword>with</keyword>
 	</context>
 	<context id="types" style-ref="type">
 	  <!-- pervasives types -->
