prevent saving of session if satisfiability not preserved + fixed pretty print (types / models)
git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@441 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/util/gtk-lang/alt-ergo.lang
+++ b/util/gtk-lang/alt-ergo.lang
@@ -56,7 +56,9 @@
 	<context id="keywords" style-ref="keyword">
 	  <keyword>ac</keyword>
 	  <keyword>and</keyword>
+	  <keyword>assert</keyword>
 	  <keyword>axiom</keyword>
+	  <keyword>cut</keyword>
 	  <keyword>distinct</keyword>
 	  <keyword>else</keyword>
 	  <keyword>exists</keyword>
