--- a/util/gtk-lang/alt-ergo.lang
+++ b/util/gtk-lang/alt-ergo.lang
@@ -56,8 +56,8 @@
 	<context id="keywords" style-ref="keyword">
 	  <keyword>ac</keyword>
 	  <keyword>and</keyword>
-	  <keyword>assert</keyword>
 	  <keyword>axiom</keyword>
+	  <keyword>check</keyword>
 	  <keyword>cut</keyword>
 	  <keyword>distinct</keyword>
 	  <keyword>else</keyword>
