better regexp for triggers in gui
git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@551 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/util/gtk-lang/alt-ergo.lang
+++ b/util/gtk-lang/alt-ergo.lang
@@ -127,14 +127,13 @@
 	</context>
 
 	<context id="trigger" style-ref="trigger">
-	  <start>\[</start>
-	  <end>\]</end>
+	  <match>\[.*\]\.</match>
 	</context>
-
+<!--
 	<context id="badtrigger" style-ref="error" extend-parent="false">
 	  <match>\]</match>
 	</context>
-
+-->
       </include>
     </context>
   </definitions>
