fixed conflict with why3 syntaxic coloration
git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@574 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/util/gtk-lang/alt-ergo.lang
+++ b/util/gtk-lang/alt-ergo.lang
@@ -7,7 +7,8 @@
 <language id="alt-ergo" _name="Alt-Ergo" version="2.0" _section="Sources">
   <metadata>
     <property name="mimetypes">text/x-alt-ergo</property>
-    <property name="globs">*.mlw;*.why</property>
+    <!-- Conflict with Why3 -->
+    <!-- <property name="globs">*.mlw;*.why</property> -->
     <property name="block-comment-start">(*</property>
     <property name="block-comment-end">*)</property>
   </metadata>
