--- a/doc/alt-ergo.1
+++ b/doc/alt-ergo.1
@@ -10,14 +10,14 @@ verification
 [
 .B options
 ]
-.B files
+.B file
 
 
 .SH DESCRIPTION
 
 .B Alt-Ergo
 is an automatic theorem prover.  It takes as inputs an arbitrary
-polymorphic and multi-sorted first-order formula written is the Why's
+polymorphic and multi-sorted first-order formula written is a why like
 syntax.
 
 .SH OPTIONS
@@ -25,6 +25,8 @@ syntax.
 .TP
 .B \-h
 Help. Will give you the full list of command line options.
+
+.SH EXAMPLES
 
 .TP
 A theory of functional arrays with integer indexes . This theory provides a built-in type ('a,'b) farray and a built-in syntax for manipulating arrays.
@@ -96,10 +98,14 @@ Alternative path for the Alt-Ergo library
 
 
 .SH AUTHORS
-.I Sylvain Conchon <conchon@lri.fr> and Evelyne Contejean <contejea@lri.fr>
+
+Sylvain Conchon
+.I <conchon@lri.fr>
+and Evelyne Contejean
+.I <contejea@lri.fr>
 
 
 .SH SEE ALSO
 
-.I
-Alt-Ergo web site: http://alt-ergo.lri.fr
+Alt-Ergo web site:
+.I http://alt-ergo.lri.fr
